test: Add and improve tests