@@ -1,26 +1,24 @@
 package fr.kevin.llps.todo.service;
 
-import org.springframework.stereotype.Service;
-
 import fr.kevin.llps.todo.dto.TodoDto;
 import fr.kevin.llps.todo.entity.Todo;
 import fr.kevin.llps.todo.exception.TodoNotFoundException;
 import fr.kevin.llps.todo.repository.TodoRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class TodoService {
 
     private final TodoRepository todoRepository;
-
-    public TodoService(TodoRepository todoRepository) {
-        this.todoRepository = todoRepository;
-    }
+    private final IdGeneratorService idGeneratorService;
 
     public TodoDto createTodo(TodoDto todoDto) {
         Todo todo = new Todo();
+        todo.setTodoId(idGeneratorService.generateId());
         todo.setTitle(todoDto.getTitle());
         todo.setCompleted(todoDto.getCompleted());
         todo.setNumOrder(todoDto.getNumOrder());
@@ -33,11 +31,16 @@ public class TodoService {
 
     public List<TodoDto> getAllTodos() {
         List<Todo> todos = todoRepository.findAllOrdered();
-        return todos.stream().map(TodoDto::new).collect(Collectors.toList());
+
+        return todos.stream()
+                .map(TodoDto::new)
+                .toList();
     }
 
     public TodoDto getTodoById(int id) {
-        return todoRepository.findById(id).map(TodoDto::new).orElseThrow(() -> new TodoNotFoundException("Todo was not found"));
+        return todoRepository.findById(id)
+                .map(TodoDto::new)
+                .orElseThrow(() -> new TodoNotFoundException("Todo was not found"));
     }
 
     public void deleteTodoById(int id) {
